# easyGPT

./: bench.sh  bench_cpu_cuda.py  pyproject.toml  sample_shakespeare.sh  train_shakespeare.sh
