[project]
name = "nanogpt"
version = "0.0.0"
description = "A minimal GPT training repository."
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "datasets==5.0.0",
    "numpy==2.4.6",
    "tiktoken==0.13.0",
    "torch==2.12.0",
    "tqdm==4.68.2",
    "transformers==5.12.0",
    "wandb==0.27.2",
]

[tool.uv]
package = false
